login with backend completed

--- a/auth/assets/css/style.css
+++ b/auth/assets/css/style.css
@@ -3,13 +3,13 @@
 }
 .gradient-custom-2 {
     /* fallback for old browsers */
-    background: #fccb90;
+    background: #1231df;
     
     /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+    background: -webkit-linear-gradient(to right, #8fa0dd, #193f9f, #151a87, #2e036d);
     
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+    background: linear-gradient(to right, #8fa0dd, #193f9f, #151a87, #2e036d);
     }
     
     @media (min-width: 768px) {
